build/log/idf_py_stdout_output_64948
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\Developement\Workspace-Anti\VIEWESMART-QMI8658\build\bootloader\esp-idf\esptool_py && C:\Users\DOM\.espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/Developement/Workspace-Anti/VIEWESMART-QMI8658/build/bootloader/bootloader.bin"
Bootloader binary size 0x59f0 bytes. 0x2610 bytes (30%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
ccache C:\Users\DOM\.espressif\tools\xtensa-esp-elf\esp-13.2.0_20250707\xtensa-esp-elf\bin\xtensa-esp32s3-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Developement/Workspace-Anti/VIEWESMART-QMI8658/build/config -ID:/Developement/Workspace-Anti/VIEWESMART-QMI8658/main -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/newlib/platform_include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/freertos/config/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/freertos/config/include/freertos -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/freertos/config/xtensa/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/freertos/esp_additions/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_hw_support/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_hw_support/include/soc -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_hw_support/dma/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_hw_support/ldo/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/heap/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/log/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/soc/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/soc/esp32s3 -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/soc/esp32s3/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/hal/platform_port/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/hal/esp32s3/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/hal/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_rom/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_rom/include/esp32s3 -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_rom/esp32s3 -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_common/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_system/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_system/port/soc -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_system/port/include/private -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/xtensa/esp32s3/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/xtensa/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/xtensa/deprecated_include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/include/apps -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/include/apps/sntp -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/lwip/src/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/port/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/port/freertos/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/port/esp32xx/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/lwip/port/esp32xx/include/sys -ID:/Developement/Workspace-Anti/VIEWESMART-QMI8658/components/LovyanGFX/src -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/nvs_flash/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/spi_flash/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_partition/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/efuse/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/efuse/esp32s3/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_lcd/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_lcd/interface -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_lcd/rgb/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/driver/deprecated -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/driver/i2c/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/driver/touch_sensor/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/driver/twai/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_pm/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_ringbuf/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_gpio/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_pcnt/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_gptimer/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_spi/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_mcpwm/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_ana_cmpr/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_i2s/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_sdmmc/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/sdmmc/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_sdspi/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_sdio/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_dac/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_rmt/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_tsens/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_sdm/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_i2c/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_uart/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/vfs/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_ledc/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_parlio/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_driver_usb_serial_jtag/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_timer/include -IC:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf/components/esp_mm/include -ID:/Developement/Workspace-Anti/VIEWESMART-QMI8658/components/qmi8658 -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Developement/Workspace-Anti/VIEWESMART-QMI8658=. -fmacro-prefix-map=C:/DEV/ESP-IDF-PACKS/v5.3.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fexceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c D:/Developement/Workspace-Anti/VIEWESMART-QMI8658/main/main.cpp
D:/Developement/Workspace-Anti/VIEWESMART-QMI8658/main/main.cpp: In function 'void app_main()':
D:/Developement/Workspace-Anti/VIEWESMART-QMI8658/main/main.cpp:439:18: error: redeclaration of 'uint32_t now'
  439 |         uint32_t now = xTaskGetTickCount() * portTICK_PERIOD_MS;
      |                  ^~~
D:/Developement/Workspace-Anti/VIEWESMART-QMI8658/main/main.cpp:355:18: note: 'uint32_t now' previously declared here
  355 |         uint32_t now = xTaskGetTickCount() * portTICK_PERIOD_MS;
      |                  ^~~
ninja: build stopped: subcommand failed.
